# ChangeLog for media-libs/xine-lib
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.686 2012/07/06 01:11:41 lu_zero Exp $

  26 Jul 2012; Fabian Groffen <grobian@gentoo.org>
  +files/xine-lib-1.2.2-darwin-ar.patch,
  +files/xine-lib-1.2.2-darwin-coreaudio.patch, xine-lib-1.2.2.ebuild:
  Fix compilation on Darwin, patches sent upstream

  06 Jul 2012; Luca Barbato <lu_zero@gentoo.org>
  files/xine-lib-1.2.1-ffmpeg-git.patch, xine-lib-1.2.2.ebuild,
  +files/xine-lib-1.2.2-libav.patch:
  Fix mistake in the version check for AVFrame.age

*xine-lib-1.2.2 (16 Jun 2012)

  16 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> +xine-lib-1.2.2.ebuild,
  xine-lib-1.2.9999.ebuild:
  Version bump -- with 1.2.9999 update so it can be copied over as 1.2.x again.

  01 Jun 2012; Zac Medico <zmedico@gentoo.org> xine-lib-1.2.1-r1.ebuild,
  xine-lib-1.2.9999.ebuild:
  tweak inherits so repoman can parse them

  22 May 2012; Samuli Suominen <ssuominen@gentoo.org> xine-lib-1.2.1-r1.ebuild,
  xine-lib-1.2.9999.ebuild:
  Change order to || ( media-video/ffmpeg $others ) for postproc.

  22 May 2012; Diego E. Pettenò <flameeyes@gentoo.org> xine-lib-1.2.1-r1.ebuild,
  xine-lib-1.2.9999.ebuild:
  Allow using older libav as well, for postproc.

  22 May 2012; Diego E. Pettenò <flameeyes@gentoo.org> xine-lib-1.2.1-r1.ebuild,
  xine-lib-1.2.9999.ebuild:
  Add an explicit dependency over libpostproc.

  17 May 2012; Samuli Suominen <ssuominen@gentoo.org> -xine-lib-1.2.1.ebuild:
  old

  17 May 2012; Samuli Suominen <ssuominen@gentoo.org> xine-lib-1.2.1-r1.ebuild:
  ppc/ppc64 stable wrt #412309

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> xine-lib-1.2.1.ebuild,
  xine-lib-1.2.1-r1.ebuild, xine-lib-1.2.9999.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  26 Apr 2012; Jeroen Roovers <jer@gentoo.org> xine-lib-1.2.1-r1.ebuild:
  Stable for HPPA (bug #412309).
