@@ -15,14 +15,14 @@ AUX xine-lib-1.2.2-solaris-xmltest.patch 423 SHA256 2eb8ac95dff5a33a5f2dbb4a90f1
 DIST xine-lib-1.2.1.tar.xz 4843584 SHA256 2d4ff0d275b46a197c6a914fdef154e9dd4c88b383f6e1f5efbb8d47a8e03d4e SHA512 f1c0d1455699efa12b36b568071099bda3d6d14df3f7de958a3a03637a1fd6d289def17812bcbe726ddc05887dfc50cd99e49bed9756a6a6bac0a66a01a869fa WHIRLPOOL 395ba140292b50f5229316dd3a1765b13cb81235b9c405e2387e567ad0f194a62930c9bad66bc18fe211edb2b7324f2e6a6ed4a5f2b2e9d367d96d22b3f6eae6
 DIST xine-lib-1.2.2.tar.xz 4857248 SHA256 e1656451be64005ef296ffafcf5085d63ef7d4ee4477024391f8e3000d3253d6 SHA512 338916386adafda85bafef0dae862c49470d7b6ccf2d8c83ada7ac2f50d12746daa0ebd3ec3fd68e063e20a1f86b0508665b3a49ba493e7fa9abf22f17bd8b81 WHIRLPOOL ad43547eaa173ecbff9ee6951a484a152b273f9441a93f728d31043e1a32a0c79b8040ec28a27986216bb77c981867e13370adc15971191c6121808e4fc2c56d
 EBUILD xine-lib-1.2.1-r1.ebuild 5393 SHA256 3050ff304484f59ce936f85cf8e9e3e53024a29b59c63eacfcc02cfe5c85ba45 SHA512 5febdf664734263410d7398eeb041bb11bba98dca477611dae2fab6a67c9f31ebc2a4539d58c2671a89275ef1cdbdfa91f781a1c46b7b6a1e840797a864dca63 WHIRLPOOL e83c5f98c09f292192a665cfb144a305bc0116c3625147ce08e27544fcdd8f3a51b8be28adcded402374bb700832d008d289d80de5c6f3d6b983bb30da881510
-EBUILD xine-lib-1.2.2.ebuild 5884 SHA256 e83da8851c696d720ad2b21686cb550a6c1d48225ab49aff1e569a1bf5ef34cd SHA512 7af31d21f5b1f861ed5f48ff23a6dcae21aca17f6beba17601ad2f7ff3e250596633e9bb922fb2623cb1afa591ac32917c1094137b54137bef4b44c3f5667a20 WHIRLPOOL c4da3254fab14f0799cd037f70009f976b8b4705b93af429feb911443c0e98e00d2f9d7027f888db1292583046d47aa419380b8943e06fffab026e07c9522b90
-EBUILD xine-lib-1.2.9999.ebuild 5406 SHA256 f0908c19b57a9cfacbf65a16d99691582ec9adf7740a353e826bf2ff39155d28 SHA512 503c6c48be4c79924113145c1485de0768f366a1d66f0c33e3fcf7d0ed22f0f2d3a612b451ea81322031521ab5d59addd9474742803783733114ea2f9a434561 WHIRLPOOL ab05343e3dd3c250cba284d3bb9d5adb2f7f3293f1aa9dc6575f69c6dbca0ef3e859d897f2c7b255d5a27ce7a9755e0f75d80e40beccc0624c2412fbca20e9e1
-MISC ChangeLog 81087 SHA256 d3ca2408e7473a8723c7bb33bccb720ef55b87cdde1df8e66c2fb6935e86cc5a SHA512 33f412b3d781d6268d8a9064d2cb9b6bf2a0d3686ee48042be4d0ee081b397749cf15cfe94dfe9f05329cbb16009a79a4ff2d126c078f2ad6bfbe5ae71aa3c23 WHIRLPOOL 9fe4963e4175e64ea419c9ed72e3a6e03015c5309caf542091bc91a1d881f0dd0f320ca93e349b655f4042d853f2df67aa36d8cad3f7c7c6bc4e28e4ed63df17
+EBUILD xine-lib-1.2.2.ebuild 5961 SHA256 b17f84d55b8d7b536dd955aa91e105addc2a85196bf6f23215e56f2f2247ee8a SHA512 9f5bb9f7b80e48b1234cb034cfd87e442d5cffb49a840c14784a3032880fdfcfd03ffdf4ff9745a94f22f1d25cf6950cee209d2bbd01749b677cce17cbebaad3 WHIRLPOOL b2c91a9764b86470c20e7c4efdb1436717bdaae2baf8abf82e300b8a88a6f27328502de01d590c509478b5832d36fcf8cc33650ed56c525e7cf516b6eef06423
+EBUILD xine-lib-1.2.9999.ebuild 5491 SHA256 0e233db9e0c7e571718fe76eb48940341fbe1995be1a799df6f44bd92dfcfdb1 SHA512 9d2ab8d545aecb3446ef10669c4c1b5a396653cd3c081787aa25fabf80a12e07017238b8c9c91e1a0002db813d2b9514bda946119181b5b8883f529ce7120133 WHIRLPOOL 80f43f666c8e761f08e07889675f16f4dcc0cfedfd8fb53e4bc7060435b6444f8d48fceff74f7ae48d97770433425370680cbd20e43f3dc5bf6337a2f45760e5
+MISC ChangeLog 81291 SHA256 17a6807f2a905608de21776472f1b4e382800137d99eeea449edb282147c5813 SHA512 9f23910c31f5a29396b57fa2b9d45b2c1f7684134d1f973e6ed347f9e8d40e6654c59fd65dfc67d05c67cfd6bc40f448173e84468a6f023cd86079ec4c283ea2 WHIRLPOOL 40a27fb45f86694a3c7fb358d383bc90b9fcd9339e5a6068b36858ba84c0cead5779fbcfb7cbf4710dad55ec9d4c01e0f004e5a0bae05efd23ffe3a291cdb151
 MISC metadata.xml 3072 SHA256 40718f6753a8cdbb8492ca71d3c335106fa7fe54cb4f6161ad1023ef8323af1e SHA512 7d179d98cf723fa1c33e1e4029272f7d5c45e1669fca23ff398c35f8c7de70dd1f37383fb4b15e388201c6bb3c153a5249302b76ed8192d1ba2e80f3165fa10d WHIRLPOOL 9ea33dced1c63361644c22ee58dee2f0f59a853b15a22fcfee7dd7d9d258aa4fffaa296e92bf96a4073c569e83858eea460a53a1f826123df9ff5790ea8aff5e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (Darwin)
+Version: GnuPG v2.0.19 (SunOS)
 
-iEYEAREIAAYFAlARoGIACgkQX3X2B8XHTomSyACgmqJmtFb61MIrk4pak6KMJnxF
-uXQAnAnbumtmCa36aaTgjdbmL/10p2N3
-=ClPi
+iEYEAREIAAYFAlCK4iYACgkQX3X2B8XHTok/hQCaAtRWAub/qOj+hHkLpEea/YZ+
+NXMAnAucI+/3++LE/QDR29TjuP4sOhi1
+=2zk7
 -----END PGP SIGNATURE-----
